[package]
name = "ld51"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.8", features = ["dynamic"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
